--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.5</version>
           <configuration>
-            <mainClass>system.App</mainClass>
+            <mainClass>system.Main</mainClass>
           </configuration>
         </plugin>
       </plugins>
