--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
       <artifactId>javafx-controls</artifactId>
       <version>15.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.parsers</groupId>
+      <artifactId>jaxp-api</artifactId>
+      <version>1.4.5</version>
+    </dependency>
+
   </dependencies>
 
   <build>
