--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>jaxp-api</artifactId>
       <version>1.4.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>16-ea+5</version>
+    </dependency>
 
   </dependencies>
 
@@ -82,7 +87,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.5</version>
           <configuration>
-            <mainClass>system.Main</mainClass>
+            <mainClass>system.App</mainClass>
           </configuration>
         </plugin>
       </plugins>
