--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
   </properties>
 
   <dependencies>
+  
+<dependency>
+    <groupId>org.w3c</groupId>
+    <artifactId>dom</artifactId>
+    <version>2.3.0-jaxb-1.0.6</version>
+</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
