--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,11 @@
   </properties>
 
   <dependencies>
-  
-<dependency>
-    <groupId>org.w3c</groupId>
-    <artifactId>dom</artifactId>
-    <version>2.3.0-jaxb-1.0.6</version>
-</dependency>
-
+    <dependency>
+      <groupId>org.w3c</groupId>
+      <artifactId>dom</artifactId>
+      <version>2.3.0-jaxb-1.0.6</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -46,11 +44,10 @@
       <artifactId>javafx-fxml</artifactId>
       <version>16-ea+5</version>
     </dependency>
-
   </dependencies>
 
   <build>
-    <pluginManagement>      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement> 
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -80,7 +77,6 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.7.1</version>
